update with some konflux info and kubeconfig
Signed-off-by: Tesshu Flower <tflower@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Claude session data
 fleet-mgmt-app-repos/.claude/
 
+# Kubernetes config files
+fleet-mgmt-app-repos/kubeconfig
+fleet-mgmt-app-repos/kubeconfig.*
+
 # Checked out repositories (have their own git histories)
 fleet-mgmt-app-repos/volsync-addon-controller/
 fleet-mgmt-app-repos/volsync-operator-product-build/
