add konflux-release-data repo to list, restructure md file
Signed-off-by: Tesshu Flower <tflower@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ fleet-mgmt-app-repos/volsync-operator-product-build/
 fleet-mgmt-app-repos/volsync-operator-product-fbc/
 fleet-mgmt-app-repos/cluster-backup-operator/
 fleet-mgmt-app-repos/volsync/
+fleet-mgmt-app-repos/konflux-release-data/
